# eva

./: README.md  probe.pt
.github/workflows/: android-release.yml
binary/: README.md  get-latest-apk.sh
cactus/: CMakeLists.txt  build.sh  cactus.h
cactus-engine/: CMakeLists.txt  test.sh
cactus-engine/src/: cloud.cpp  complete.cpp  embed.cpp  engine.h  engine_image.cpp  graph_ffi.cpp  json_escape.h  model.cpp  model_npu.cpp  npu.cpp  npu_ane.h  npu_ane.mm  rag.cpp  sp.cpp  telemetry_impl.cpp  tokenizer.cpp  transcribe.cpp  utils.h
cactus-engine/tests/: CMakeLists.txt  asr.cpp  chat.cpp  test_stt.cpp
cactus-engine/tests/android/: CMakeLists.txt  run.sh
cactus-engine/tests/ios/: .gitignore  configure_xcode.rb  run.sh
cactus-graph/: CMakeLists.txt  cactus_graph.h
cactus-graph/src/: builder.cpp  core.cpp  execute.cpp  io.cpp  ops_cache.cpp  ops_math.cpp  ops_tensor.cpp  param_io.cpp
cactus-graph/tests/: test_cache.cpp  test_graph.cpp  test_io.cpp  test_ops.cpp  test_utils.h
cactus-kernels/: CMakeLists.txt  cactus_kernels.h
cactus-kernels/src/: blas.cpp  conv2d.cpp  fused.cpp  lstm.cpp  matmul.cpp  nn.cpp  threading.h
cactus/engine/: engine.h  engine_constraints.cpp  engine_model.cpp  engine_tokenizer.cpp
cactus/ffi/: cactus_complete.cpp  cactus_graph.cpp  needle_tools.h
cactus/graph/: graph_io.cpp  graph_param_io.cpp
cactus/models/: model.h  model_needle.cpp  model_siglip2.cpp
cactus/telemetry/: telemetry.cpp
flutter/example/: pubspec.yaml
flutter/example/android/app/: build.gradle.kts
flutter/example/android/app/src/main/: AndroidManifest.xml
flutter/example/android/app/src/main/res/drawable/: launch_background.xml
flutter/example/android/app/src/main/res/xml/: network_security_config.xml
flutter/example/lib/: app_prefs.dart  background_indexer.dart  cactus.dart  chat_store.dart  doc_text_viewer_screen.dart  document_service.dart  documents_screen.dart  inference_isolate.dart  intro_screen.dart  main.dart  model_catalog.dart  model_manager.dart  music_player.dart  music_service.dart  music_store.dart  pdf_viewer_screen.dart  photo_service.dart  photo_store.dart  photos_screen.dart  rag_index.dart  settings_screen.dart  text_util.dart  update_check.dart  voice_service.dart  wikipedia_reader_screen.dart  wikipedia_service.dart  zim_ffi.dart
flutter/example/native_zim/: CMakeLists.txt  build_zim.sh  zimffi.cpp
python/: README.md  pyproject.toml  requirements.txt
python/cactus/: __init__.py  _version.py  server.py
python/cactus/bindings/: cactus.py  graph.py
python/cactus/cli/: __init__.py  auth.py  clean.py  common.py  compile.py  config_utils.py  convert.py  download.py  model.py  run.py  runtime.py  serve.py  test.py  transcribe.py  transpile.py  utils.py
python/cactus/convert/: cli.py  handoff_probe.py  interleave_orthogonal_cq4.py
python/cactus/convert/cactus_adapters/: config_utils.py  tensor_io.py  tokenizer.py
python/cactus/convert/export/: files.py  qdq.py
python/cactus/convert/model_adapters/: adapters.py  naming.py  nemo.py  policy.py
python/cactus/convert/quantization/: cq.py
python/cactus/convert/tests/: test_cq.py  test_lfm2_adapter.py  test_naming_qdq.py  test_policy.py
python/cactus/transpile/: capture_jax.py  component_partition.py  component_plan.py  hf_model.py  importers.py  jax_semantic_rewrites.py  jax_user_graph_bundle.py  lower.py  media_limits.py  model_adapters.py  model_profiles.py  multimodal_runtime.py  optimize_graph.py  runtime_compat.py  tdt_runtime.py  weight_binding.py  weight_compat.py
python/cactus/transpile/canonicalize/: cleanup.py  utils.py
python/cactus/transpile/npu/: README.md  __init__.py  audio.py  coremltools_patches.py  pipeline.py  vision.py
python/src/: cactus.py  cli.py  graph.py
python/tests/: test_bindings.py  test_capture_jax.py  test_capture_jax_user_graph_bundle.py  test_cli_run.py  test_cli_transpile_defaults.py  test_download.py  test_model.py  test_nomic_text_embedding.py  test_server.py  test_server_live.py  test_transpile_weight_compat.py
